--- a/Html/Styles.css
+++ b/Html/Styles.css
@@ -11,10 +11,13 @@
 
 .button:hover {
   box-shadow: 0 8px 25px -3px rgba(20, 45, 100, 0.15);
+  border: 0px;
+  font-weight: bold;
+  color: #101e49;
 }
 
 .header {
-  padding: 35px 0;
+  padding: 35px 0; /*all sides*/
 }
 
 .header .flex .logo {
@@ -56,7 +59,7 @@
 }
 .main .flexitemWrap .flexitem {
   border-radius: 10px;
-  padding: 50px 60px 30px;
+  padding: 50px 60px 30px; /*top->horizantal->bottom*/
   display: flex;
   align-items: center;
   flex: 0 0 36%;
@@ -64,6 +67,7 @@
   position: relative;
   background-color: #fff;
   box-shadow: 0 45px 45px -20px rgba(25, 45, 100, 0.15);
+  /*offset x -> offset y -> blur radius -> speard radius -> color*/
 }
 
 .main .flexitemWrap .flexitem .contentTitle {
@@ -73,7 +77,7 @@
   line-height: normal;
 }
 
-.main .flexitemWrap .flexitem .linkBusiness {
+.main .flexitemWrap .flexitem .loginPage {
   border-radius: 3px;
   text-decoration: none;
   font-size: 16px;
@@ -86,11 +90,12 @@
   color: #fff;
 }
 
-.main .flexitemWrap .flexitem .linkBusiness:hover {
+.main .flexitemWrap .flexitem .loginPage:hover {
   box-shadow: 0 8px 25px -3px rgba(20, 45, 100, 0.15);
+  font-weight: bold;
 }
 
-.main .flexitemWrap .flexitem .linkDev {
+.main .flexitemWrap .flexitem .LoginPage {
   border-radius: 3px;
   border: 1px solid #4e9afc;
   text-decoration: none;
@@ -104,8 +109,9 @@
   color: #4e9afc;
 }
 
-.main .flexitemWrap .flexitem .linkDev:hover {
+.main .flexitemWrap .flexitem .LoginPage:hover {
   box-shadow: 0 8px 25px -3px rgba(20, 45, 100, 0.15);
+  font-weight: bold;
 }
 
 .main .flexitemWrap .flexitem .sectionTitle {
@@ -117,28 +123,17 @@
   left: 50%;
   transform: translate(-50%, -15px);
   background-color: #101e49;
-  color: #fff;
 }
 
-@media (min-height: 901px) {
-  .title {
-    margin-top: 100px;
-  }
+.title {
+  margin-top: 100px;
 }
 
-@media (max-height: 900px) {
-  .title {
-    margin-top: 60px;
-  }
-}
-
-@media (min-width: 992px) {
-  .main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 body {
@@ -150,7 +145,6 @@ body {
   font-family: Arial;
   min-height: 100vh;
 }
-/*proxima-nova*/
 
 .homepage-wrapper .homepage-container {
   flex-direction: column;
