Font Family Changed

--- a/Html/Styles.css
+++ b/Html/Styles.css
@@ -142,7 +142,7 @@ body {
 
 .homepage-wrapper {
   background-color: #f7f8fa;
-  font-family: Arial;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   min-height: 100vh;
 }
 
