--- a/CSS/Page2Style.css
+++ b/CSS/Page2Style.css
@@ -1,8 +1,8 @@
 .Header {
   margin: 50px -8px 0px -8px;
-  border: solid green;
   padding: 20px 35px 20px;
   height: 60px;
+  background-color: #fff;
 }
 .subhead {
   position: relative;
@@ -14,7 +14,6 @@
 }
 
 .Box {
-  border: solid green;
   width: 600px;
   height: 250px;
   display: inline-block;
@@ -24,6 +23,10 @@
   margin-top: 50px;
   margin-bottom: 5px;
   padding: 10px 10px 10px 20px;
+  background-color: #fff;
+}
+.Box:hover {
+  box-shadow: 0 8px 25px -3px rgba(20, 45, 100, 0.15);
 }
 .boxtitle {
   font-size: 30px;
@@ -40,19 +43,41 @@
 }
 
 .Btns {
-  border: solid green;
+  border: 2px solid #bfbfbf;
   position: absolute;
   bottom: 25px;
   width: 300px;
   height: 50px;
-  font-size: 27px;
+  font-size: 26px;
 }
 .Btn {
   position: absolute;
   text-decoration: none;
   top: 10px;
   left: 67px;
+  color: black;
 }
 .Btns:hover {
-  box-shadow: 0 8px 25px -3px rgba(20, 45, 100, 0.15);
+  font-weight: 600;
+  font-size: 25px;
+}
+
+img {
+  width: 200;
+  height: 200;
+  position: absolute;
+  bottom: 40px;
+  left: 420px;
+}
+.c-adjust {
+  width: 125;
+  height: 125;
+  position: absolute;
+  left: 420px;
+  padding-bottom: 35px;
+  padding-left: 55px;
+}
+
+body {
+  background-color: #f1f2f6;
 }
