SET UP THE DJANGO ENVIROMENT

--- a/JudgeSystemProject/templates/JudgeSystemApp/Profile.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/Profile.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
-  <link rel = "stylesheet" href = "../CSS/Style.css">
+  <link rel = "stylesheet" href = "/OnlineJudgeSystem/JudgeSystemProject/static/Style.css">
 </head>
 <header>
   <nav>
     <ul>
-      <li><a href = "main.html">Home</a></li>
-      <li><a href = "main.html">Explore</a></li>
+      <li><a href = "/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/main.html">Home</a></li>
+      <li><a href = "/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/main.html">Explore</a></li>
       <li><a href = "#">Practice</a></li>
       <li><a href = "#">Leaderboard</a></li>
       <li><a href = "#">Notification</a></li>
-      <li><a href = "Profile.html">Profile</a></li>
+      <li><a href = "/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/Profile.html">Profile</a></li>
     </ul>
-    <img class = "headerPic" src = "../img/OnlineSystem.gif" alt = "AnimatedGif"/>
+    <img class = "headerPic" src = "/OnlineJudgeSystem/JudgeSystemProject/static/img/OnlineSystem.gif" alt = "AnimatedGif"/>
   </nav>
 </header>
 <main>
     <section class = "ProfileSection">
-        <img class = "ProfilePic" src = "../img/Nabhag.jpeg" alt = "ProfilePic">
+        <img class = "ProfilePic" src = "/OnlineJudgeSystem/JudgeSystemProject/static/img/Nabhag.jpeg" alt = "ProfilePic">
         <h2 class = "Details">Nabhag Motivaras</h2>
         <h3 class = "Details">@Nabhag8848</h3>
         <h4 class = "Details">India</h4>
@@ -53,7 +53,7 @@
             <li>Sat</li>
         </ul>
         <ul class="squares">
-            <script src = "../Js/Graph.js"></script>
+            <script src = "/OnlineJudgeSystem/JudgeSystemProject/static/Graph.js"></script>
         </ul>
     </div>
 
