--- a/JudgeSystemProject/templates/JudgeSystemApp/Problem.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/Problem.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Question</title>
-    <link rel = "stylesheet" href = "../CSS/Style.css">
+    <link rel = "stylesheet" href = "/OnlineJudgeSystem/JudgeSystemProject/static/Style.css">
 </head>
 <header>
     <nav>
         <ul>
-            <li><a href = "main.html">Home</a></li>
-            <li><a href = "main.html">Explore</a></li>
+            <li><a href = "/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/main.html">Home</a></li>
+            <li><a href = "/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/main.html">Explore</a></li>
             <li><a href = "#">Practice</a></li>
             <li><a href = "#">Leaderboard</a></li>
             <li><a href = "#">Notification</a></li>
-            <li><a href = "Profile.html">Profile</a></li>
+            <li><a href = "/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/">Profile</a></li>
         </ul>
-        <img class = "headerPic" src = "../img/OnlineSystem.gif" alt = "AnimatedGif"/>
+        <img class = "headerPic" src = "/OnlineJudgeSystem/JudgeSystemProject/static/img/OnlineSystem.gif" alt = "AnimatedGif"/>
     </nav>
 </header>
 <iframe src = "https://www.online-ide.com/xFBUeQcXRi"></iframe>
