--- a/JudgeSystemProject/templates/JudgeSystemApp/index.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <title>Online Judge System</title>
        
-    <link rel="stylesheet" href="../CSS/Styles.css">
+    <link rel="stylesheet" href="/OnlineJudgeSystem/JudgeSystemProject/static/Styles.css">
 </head>
 
 <body>
@@ -15,7 +15,7 @@
                     <div class="flex">
                         <div class="flexItemLogo">
                             <div class="logo"><img alt="Logo"
-                                    src="../img/Animated1.gif" />
+                                    src="/OnlineJudgeSystem/JudgeSystemProject/static/img/Animated1.gif" />
                             </div>
                         </div>
                         <div class="buttons">
@@ -39,7 +39,7 @@
                                 <h3 class="contentTitle">Coding is Fun</h3>
                                 <p class="description">Have you ever bored of Wordfile for submitting your Assignments?? If Yes, No Worries! from now on.
                                     You won't need to do it.Sign up for free.
-                                </p><a class="LoginPage" href="/Html/login_register.html">Join now</a>
+                                </p><a class="LoginPage" href="/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/login_register.html">Join now</a>
                             </div>
                         </div>
                     </div>
