--- a/JudgeSystemProject/templates/JudgeSystemApp/login_register.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/login_register.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/CSS/login_register.css">
+    <link rel="stylesheet" href="/OnlineJudgeSystem/JudgeSystemProject/static/login_register.css">
         
 </head>
 <body>
@@ -16,7 +16,7 @@
                    <button type="button" class="toggle-btn" id = "lb" onclick="login() ; white1()">LogIn</button>
                    <button type="button" class="toggle-btn" id = "rb" onclick="register() ; white2()">Register</button>
                  </div>
-                 <form action="/php/login.php"id="login" class="form-input" method="POST">
+                 <form action="/OnlineJudgeSystem/php/login.php"id="login" class="form-input" method="POST">
                      <input type="text" class="input-feild" placeholder="UserID" name="userid" required>
                      
                      <input type="password" class="input-feild" placeholder="Password" name="password" required>
@@ -25,7 +25,7 @@
                      <br>
                      <button type="submit" class="submit-btn" name="login">LogIn</button>
                  </form>
-                 <form action="/php/register.php" id ="register" class="form-input" method="POST">
+                 <form action="/OnlineJudgeSystem/php/register.php" id ="register" class="form-input" method="POST">
                     <input type="text" class="input-feild" placeholder="UserID" name="username" required>
                     <input type="email" class="input-feild" placeholder="EmailID" name="email" required>
                     <input type="password" class="input-feild" placeholder="Password" name="password" required>
