--- a/JudgeSystemProject/templates/JudgeSystemApp/main.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/main.html
@@ -1,8 +1,10 @@
+
+{% load static %}
 <!DOCTYPE html>
 <html lang = "en">
 <head>
     <meta charset="UTF-8">
-    <link rel = "stylesheet" href = "../CSS/Style.css">
+    <link rel = "stylesheet" href = "{% static 'CSS/Style.css' %}">
     <title>OnlineJudgeSystem</title>
 </head>
 <header>
@@ -13,16 +15,16 @@
                 <li><a href = "#">Practice</a></li>
                 <li><a href = "#">Leaderboard</a></li>
                 <li><a href = "#">Notification</a></li>
-                <li><a href = "Profile.html">Profile</a></li>
+                <li><a href = "/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/Profile.html">Profile</a></li>
             </ul>
-        <img class = "headerPic" src = "../img/OnlineSystem.gif" alt = "AnimatedGif"/>
+        <img class = "headerPic" src = "{% static 'img/OnlineSystem.gif' %}" alt = "AnimatedGif"/>
     </nav>
 </header>
 <body>
 
 <article class = "Intro">
     <p class = "Description">Coding is Fun!!</p>
-    <img src ="../img/63921-developer.gif" alt = "Animated Gif"/>
+    <img src =" {% static 'img/63921-developer.gif' %}" alt = "Animated Gif"/>
 </article>
 <div id = "Explore">
     <h2>Explore</h2>
@@ -31,7 +33,7 @@
         <h1 class="boxheader">The Problem Solving Through C</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
         <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
-        <img class="c-adjust" src="../img/C.png" alt = "C"/>
+        <img class="c-adjust" src="{% static 'img/C.png' %}" alt = "C"/>
     </div>
 
     <div class="Box">
@@ -39,15 +41,15 @@
         <h1 class="boxheader">OOP with C++</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
         <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
-        <img class = "Boximg" src="../img/C++.png" alt = "C++"/>
+        <img class = "Boximg" src="{% static 'img/C++.png' %}" alt = "C++"/>
     </div>
 
     <div class="Box">
         <p class="boxtitle">Semester - 3</p>
         <h1 class="boxheader">Programming With Java</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
-        <div class="Btns"><a class="Btn" href="Problem.html">Start Learning</a></div>
-        <img class = "Boximg" src="../img/Java.png" alt = "Java"/>
+        <div class="Btns"><a class="Btn" href="/OnlineJudgeSystem/JudgeSystemProject/templates/JudgeSystemApp/Problem.html">Start Learning</a></div>
+        <img class = "Boximg" src="{% static 'img/Java.png' %}" alt = "Java"/>
     </div>
 
     <div class="Box">
@@ -55,7 +57,7 @@
         <h1 class="boxheader">Python Programming</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
         <div class="Btns"><a class="Btn" href="">Start Learning</a></div>
-        <img class = "Boximg" src="../img/Python.png" alt = "Python" />
+        <img class = "Boximg" src="{% static 'img/Python.png' %}" alt = "Python" />
     </div>
     <hr id = "Dotted-hr">
 </div>
