--- a/JudgeSystemProject/templates/JudgeSystemApp/login_register.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/login_register.html
@@ -1,3 +1,6 @@
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="/OnlineJudgeSystem/JudgeSystemProject/static/login_register.css">
+    <link rel="stylesheet" href="{% static 'CSS/login_register.css' %}">
         
 </head>
 <body>
