Added the page for Question List

--- a/JudgeSystemProject/templates/JudgeSystemApp/main.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/main.html
@@ -48,7 +48,7 @@
         <p class="boxtitle">Semester - 3</p>
         <h1 class="boxheader">Programming With Java</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
-        <div class="Btns"><a class="Btn" href="{% url 'Problem' %}">Start Learning</a></div>
+        <div class="Btns"><a class="Btn" href="{% url 'questionsList' %}">Start Learning</a></div>
         <img class = "Boximg" src="{% static 'img/Java.png' %}" alt = "Java"/>
     </div>
 
