--- a/JudgeSystemProject/templates/JudgeSystemApp/index.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/index.html
@@ -33,7 +33,7 @@
                                 <h3 class="contentTitle">Campus Community</h3>
                                 <p class="description">Now you won't need to take a Wordfile of Student records.
                                     Hoping you ain't Student Signing up as Teacher!! haha.
-                                </p><a class="loginPage" href="">Join now</a>
+                                </p><a class="loginPage" href="{% url 'login' %}">Join now</a>
                             </div>
                         </div>
                         <div class="flexitem">
@@ -48,6 +48,6 @@
                 </div>
             </div>
         </div>
-</body>
+</body>  
 
 </html>
