--- a/JudgeSystemProject/templates/JudgeSystemApp/Problem.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/Problem.html
@@ -10,9 +10,8 @@
     <nav>
         <ul>
             <li><a href = "{% url 'main' %}">Home</a></li>
-            <li><a href = "{% url 'main' %}">Explore</a></li>
-            <li><a href = "#">Practice</a></li>
-            <li><a href = "#">Leaderboard</a></li>
+            <li><a href = "{% url 'main' %}">Join</a></li>
+            <li><a href = "{% url 'questionsList' %}">Practice</a></li>
             <li><a href = "#">Notification</a></li>
             <li><a href = "{% url 'Profile' %}">Profile</a></li>
         </ul>
