--- a/JudgeSystemProject/templates/JudgeSystemApp/questionsList.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/questionsList.html
@@ -8,14 +8,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuestionsList</title>
     <link rel="stylesheet" href="{% static 'CSS/questionsList.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-    <h1>{{list }}</h1>
     
-        <div class="container">
-            <h1>QUESTION NUMBER - {{ list }}</h1>
-            <a href="{% url 'Problem' list %}"> CLICK </a>
+    {% for list in lists %}
+    <div class="card" style="margin: 20px;">
+        <div class="card-header">
+          PRACTICAL -- {{list}}
         </div>
-    
+        <div class="card-body">
+          <h5 class="card-title">Heading of Practical -- {{list}}</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint ad quisquam voluptas nobis nemo, exercitationem reiciendis quidem ea itaque?</p>
+
+          <a href="{% url 'Problem' %}" class="btn btn-primary" style="background-color: #101e49;">CODE NOW</a>
+        </div>
+      </div>
+      <br>
+    {% endfor %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        
 </body>
 </html>
