--- a/JudgeSystemProject/templates/JudgeSystemApp/main.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/main.html
@@ -12,9 +12,8 @@
         <ul>
                 <li><a href = "#">Home</a></li>
                 <li><a href = "{% url 'index' %}">Join</a></li>
-                <li><a href = "{% url 'questionsList' %}">Practice</a></li>
+                <li><a href = "{% url 'questionsList' 'JAVA' %}">Practice</a></li>
                 
-                <li><a href = "#">Notification</a></li>
                 <li><a href = "{% url 'Profile' %}">Profile</a></li>
             </ul>
         <img class = "headerPic" src = "{% static 'img/OnlineSystem.gif' %}" alt = "AnimatedGif"/>
@@ -32,7 +31,7 @@
         <p class="boxtitle">Semester - 1</p>
         <h1 class="boxheader">The Problem Solving Through C</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
-        <div class="Btns"><a class="Btn" href="{% url 'questionsList' %}">Start Learning</a></div>
+        <div class="Btns"><a class="Btn" href="{% url 'questionsList' 'C' %}">Start Learning</a></div>
         <img class="c-adjust" src="{% static 'img/C.png' %}" alt = "C"/>
     </div>
 
@@ -40,7 +39,7 @@
         <p class="boxtitle">Semester - 2</p>
         <h1 class="boxheader">OOP with C++</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
-        <div class="Btns"><a class="Btn" href="{% url 'questionsList' %}">Start Learning</a></div>
+        <div class="Btns"><a class="Btn" href="{% url 'questionsList' 'CPP' %}">Start Learning</a></div>
         <img class = "Boximg" src="{% static 'img/C++.png' %}" alt = "C++"/>
     </div>
 
@@ -48,7 +47,7 @@
         <p class="boxtitle">Semester - 3</p>
         <h1 class="boxheader">Programming With Java</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
-        <div class="Btns"><a class="Btn" href="{% url 'questionsList' %}">Start Learning</a></div>
+        <div class="Btns"><a class="Btn" href="{% url 'questionsList' 'JAVA' %}">Start Learning</a></div>
         <img class = "Boximg" src="{% static 'img/Java.png' %}" alt = "Java"/>
     </div>
 
@@ -56,7 +55,7 @@
         <p class="boxtitle">Semester - 4</p>
         <h1 class="boxheader">Python Programming</h1>
         <p class="topics">Variables,Control Constructs, Loops,Arrays,Pointers</p>
-        <div class="Btns"><a class="Btn" href="{% url 'questionsList' %}">Start Learning</a></div>
+        <div class="Btns"><a class="Btn" href="{% url 'questionsList' 'PYTHON' %}">Start Learning</a></div>
         <img class = "Boximg" src="{% static 'img/Python.png' %}" alt = "Python" />
     </div>
     <hr id = "Dotted-hr">
