--- a/JudgeSystemProject/templates/JudgeSystemApp/questionsList.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/questionsList.html
@@ -7,25 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuestionsList</title>
-    <link rel="stylesheet" href="{% static 'CSS/questionsList.css' %}">
+    <link rel="stylesheet" href="{% static 'CSS/Style.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
+
 <body>
-    
+ 
     {% for list in lists %}
     <div class="card" style="margin: 20px;">
         <div class="card-header">
-          PRACTICAL -- {{list}}
+          <h4><strong>{{list.heading}}</strong></h4>
         </div>
         <div class="card-body">
-          <h5 class="card-title">Heading of Practical -- {{list}}</h5>
-          <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat sint ad quisquam voluptas nobis nemo, exercitationem reiciendis quidem ea itaque?</p>
+          <h5 class="card-title">{{list.difficulty}}</h5>
+          <p class="card-text"> {{list.description}}</p>
 
-          <a href="{% url 'Problem' %}" class="btn btn-primary" style="background-color: #101e49;">CODE NOW</a>
+          <a href="{% url 'Problem' slug list.heading %}" class="btn btn-primary" style="background-color: #101e49;">CODE NOW</a>
         </div>
       </div>
       <br>
     {% endfor %}
+  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
