SETTING UP THE URLS FOR EXPLORE FILE

--- a/JudgeSystemProject/templates/JudgeSystemApp/Problem.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/Problem.html
@@ -12,6 +12,8 @@
         <ul>
             <li><a href = "{% url 'main' %}">Home</a></li>
             <li><a href = "{% url 'main' %}">Join</a></li>
+            <li><a href = "{% url 'explore' %}">Explore</a></li>
+
             <li><a href = "{% url 'Profile' %}">Profile</a></li>
         </ul>
         <img class = "headerPic" src = "{% static 'img/OnlineSystem.gif' %}" alt = "AnimatedGif"/>
