--- a/JudgeSystemProject/templates/JudgeSystemApp/Profile.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/Profile.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a href = "{% url 'main' %}">Home</a></li>
       <li><a href = "{% url 'main' %}">Explore</a></li>
-      <li><a href = "{% url 'questionsList' %}">Practice</a></li>
+      <li><a href = "{% url 'explore' %}">Explore</a></li>
       <li><a href = "{% url 'Profile' %}">Profile</a></li>
     </ul>
     <img class = "headerPic" src = "{% static 'img/OnlineSystem.gif' %}" alt = "AnimatedGif"/>
