--- a/JudgeSystemProject/templates/JudgeSystemApp/Profile.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/Profile.html
@@ -10,8 +10,9 @@
   <nav>
     <ul>
       <li><a href = "{% url 'main' %}">Home</a></li>
-      <li><a href = "{% url 'main' %}">Explore</a></li>
-      <li><a href = "{% url 'explore' %}">Explore</a></li>
+      <li><a href = "{% url 'index' %}">Join</a></li>
+
+      <li><a href = "{% url 'main'  %}">Explore</a></li>
       <li><a href = "{% url 'Profile' %}">Profile</a></li>
     </ul>
     <img class = "headerPic" src = "{% static 'img/OnlineSystem.gif' %}" alt = "AnimatedGif"/>
