--- a/JudgeSystemProject/templates/JudgeSystemApp/main.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/main.html
@@ -12,7 +12,7 @@
         <ul>
                 <li><a href = "#">Home</a></li>
                 <li><a href = "{% url 'index' %}">Join</a></li>
-                <li><a href = "{% url 'explore' %}">Explore</a></li>
+                <li><a href = "#Explore">Explore</a></li>
                 
                 <li><a href = "{% url 'Profile' %}">Profile</a></li>
             </ul>
