SEPRATED LOGIN AND REGISTER PAGE

--- a/JudgeSystemProject/templates/JudgeSystemApp/register.html
+++ b/JudgeSystemProject/templates/JudgeSystemApp/register.html
@@ -10,33 +10,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="{% static 'CSS/login_register.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
         
 </head>
+
+
 <body>
-      <div class="container">
-           <div class="form-box">
-              
-                  
-                   <button type="submit" class="submit-btn " id="lb" name="login" style="margin: 10px;">Register</button>
-
-                                 
-                 <form action="" id ="login" class="form-input"  method="POST">
-                    {% csrf_token %}
-                    <input type="text" class="input-feild" placeholder="UserID" name="username" required>
-                    <input type="email" class="input-feild" placeholder="EmailID" name="email" required>
-                    <input type="password" class="input-feild" placeholder="Password" name="password" required>
-                    <br>
-                    <br>
-                    <br>
-                    <!-- {{form.as_p}} -->
-                    <button type="submit" class="submit-btn" name="register">Register</button>
-                </form>
-                <h5 style="padding-left: 100px;">Already an user ?? <a href="{% url 'login' %}">LogIn</a></h5>
-                 
-           </div>
-           
-
-      </div>   
-      
+    <div class="card text-center" style="margin: 100px; width: 1500px;">
+        <div class="card-header" >
+          <h1><strong style=" color: #101e49;">REGISTER</strong></h1>
+        </div>
+        <div class="card-body">
+            <div class="input-group mb-3" style="margin: 50px; align-items: center; width: 900px; padding-left: 500px;">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-default">USERNAME</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+              </div>
+              <div class="input-group mb-3" style="margin: 50px; align-items: center; width: 900px; padding-left: 500px;">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-default">EMAIL</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+              </div>
+              <div class="input-group mb-3" style="margin: 50px; align-items: center; width: 900px; padding-left: 500px;">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-default">PASSWORD</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+              </div>
+              <div class="input-group mb-3" style="margin: 50px; align-items: center; width: 900px; padding-left: 500px;">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" id="inputGroup-sizing-default">CONFIRM PASSWORD</span>
+                </div>
+                <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+              </div>
+          <a href="#" class="btn btn-primary" style="background-color: #101e49;">REGISTER</a>
+        </div>
+        <div class="card-footer text-muted">
+         Already Logged In  <a href="{% url 'login' %}">LOGIN</a>
+        </div>
+      </div>
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 </html>
