--- a/JudgeSystemProject/JudgeSystemApp/static/CSS/login_register.css
+++ b/JudgeSystemProject/JudgeSystemApp/static/CSS/login_register.css
@@ -1,30 +1,67 @@
+body {
+    margin:0 0 0 0;
+}
 .container{
     height: 100vh;
     width: 100vw;
     position: fixed;
-    background: #d8d8d8;
+    background-color: #f7f8fa;
     background-position: center;
     background-size: cover;
 }
 .form-box{
-    width: 380px;
-    height: 480px;
+    width: 23vw;
+    height: 60vh;
     background-color: rgba(255,255,255,0.85);
     position: relative;
     margin: 6% auto;
     padding: 5px;
     border-radius: 15px;
     overflow: hidden;
+    box-shadow: 0px 0px 100px -10px rgba(20, 45, 100, 0.5);
 
     
 }
+.button-box{
+    width: 220px;
+    margin: 35px auto;
+    position: relative; 
+    box-shadow: 0 0 20px 9px #CCCCCC;
+    border-radius:30px ;
+}
+.toggle-btn{
+    padding:10px 30px;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    outline: none;
+    position: relative;
+}
 
+#btn{
+    top:0;
+    left: 0;
+    position: absolute;
+    width: 110px;
+    height: 100%;
+    background:#101e49;
+     /* linear-gradient(to right,#4f78e7,#6e94ee); */
+    border-radius: 30px;
+    transition: .5s;
 
+}
+.form-input{
+    top: 15vh;
+    width: 20vw;
+    position: absolute;
+    padding: 20px 10px 20px 20px;
+    transition: .5s;
+    
 
-
+}
 .input-feild{
-    width: 100%;
-    padding: 15px 10px;
+    width: 15vw;
+    padding: 15px 15px;
     margin: 5px 0;
     border-left: 0;
     border-top: 0;
@@ -40,7 +77,6 @@
     padding: 10px 30px;
     cursor: pointer;
     display: block;
-    margin:auto;
     background: #101e49 ;
     /* linear-gradient(to right,#4f78e7,#6e94ee); */
     border: 0;
@@ -48,10 +84,4 @@
     border-radius: 30px;
     align-items: center;
     
-}
-#login{
-    left: 50px;
-}
-#register{
-    left: 450px;
 }
